Consolidate material logic